--- a/lib/forall_web/templates/contact/index.html.eex
+++ b/lib/forall_web/templates/contact/index.html.eex
@@ -20,13 +20,13 @@
   </div>
   <div class="col text-center m-3">
     <br>
-    <img src="/images/phone.png"  alt="phone: 508-297-1829"><br>
+    <img src="/images/phone.gif"  alt="phone: 508-297-1829"><br>
     Tel: 508-297-1829
     <hr>
-    <img src="/images/envelop.png"  alt="envelop"><br>
+    <img src="/images/envelop.gif"  alt="envelop"><br>
     azgodsministryforallpeople@gmail.com
     <hr>
-    <img src="/images/postcard.png"  alt="postcard"><br>
+    <img src="/images/postcard.gif"  alt="postcard"><br>
     P.O.Box 543<br>
     South Easton, MA 02375
   </div>
