--- a/lib/forall_web/templates/layout/app.html.eex
+++ b/lib/forall_web/templates/layout/app.html.eex
@@ -16,7 +16,7 @@
       <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="/">
-            <img src="/images/az_icon.jpg" width="250" height="" alt="">
+            <img src="/images/az_icon_upgraded.gif" width="250" height="" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
                   aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
