--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -25,8 +25,8 @@
   </div>
 </div>
 
-<div id="home_cards" class="row justify-content-center">
-    <div class="col-10 home_card_group">
+<div class="row justify-content-center pb-3">
+    <div class="col-10">
       <div class="card-group">
 
         <div class="card home">
