--- a/lib/forall_web/templates/donate/index.html.eex
+++ b/lib/forall_web/templates/donate/index.html.eex
@@ -2,8 +2,10 @@
   <div class="col-lg-6">
       <div id="donate_barley_title" class="text-center py-2">DONATE</div>
       <div id="donate_barley_text" class="text-center mb-4 p-2">
-        There’s so much to do - so many people to help.
-        Become a Sponsor Today!
+        Your donation will help us share the message of God with those in the nursing homes, hospitals,
+        home shelters, and others.<br>
+        There’s so much to do - so many people to help.<br>
+        Please become a Sponsor Today!
       </div>
   </div>
 </div>
@@ -76,8 +78,11 @@
               <hr id="hr_donate_cards">
                 Please consider making a tax deductible donation to the ministry.
                 Any amount is acceptable.
-                You can mail the checks. You can stop and drop any items you no longer using that is in 
-                reasonable conditions. You may donate gifts for the Christmas party at the nursing homes.
+                You can mail the checks to:<br>
+                <br>
+                A & Z God's Ministry For All People<br>
+                P.O. Box 543<br>
+                South Easton, MA 02375. 
             </p>
           </div>
         </div>
