--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -1,6 +1,6 @@
 <div class="row" style="min-width: 1028px;">
   <div class="col john812">
-      <div id="j812">I am the Light of the World</div>
+      <div id="j812">Led by the Holy Spirit to Preach the true word of God.</div>
       <div id="john812">John 8:12</div>
   </div>
 </div>
