--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -1,7 +1,7 @@
 <div class="row" style="min-width: 1028px;">
   <div class="col john812">
-      <div id="j812">Jesus is the only way to Heaven</div>
-      <div id="john812">John 8:12</div>
+      <div id="j812">Jesus is the Only Way to Heaven</div>
+      <div id="john812"></div>
   </div>
 </div>
 <div class="row" style="min-width: 1028px;">
