--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -7,8 +7,7 @@
 <div class="row" style="min-width: 1028px;">
   <div class="col mark1615">
     <div id="mark1615_txt">
-      He said to them: "Go into all the World and<br>
-      Preach the Gospel to all Creation."
+      We are led by the Holy Spirit to spread the word.
     </div>
     <div id="mark1615_ref">
       Mark 16.15
