--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -7,10 +7,9 @@
 <div class="row" style="min-width: 1028px;">
   <div class="col mark1615">
     <div id="mark1615_txt">
-      We are led by the Holy Spirit to spread the word.
+      Pastor Tony is led by the Holy Spirit to spread the gospel.
     </div>
     <div id="mark1615_ref">
-      Mark 16.15
     </div>
     <div id="we_all_should">
       We all should be involved in praying with our families, friends and our community.<br>
