--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -7,7 +7,7 @@
 <div class="row" style="min-width: 1028px;">
   <div class="col mark1615">
     <div id="mark1615_txt">
-      Pastor Tony is led by the Holy Spirit to reveal your salvation.
+      Pastor Tony is led by the Holy Spirit to reveal your path Salvation.
     </div>
     <div id="mark1615_ref">
     </div>
