--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -7,17 +7,12 @@
 <div class="row" style="min-width: 1028px;">
   <div class="col mark1615">
     <div id="mark1615_txt">
-      Pastor Tony is led by the Holy Spirit to reveal your path Salvation.
+      Pastor Tony is led by the Holy Spirit to reveal your path to Salvation.
     </div>
     <div id="mark1615_ref">
     </div>
     <div id="we_all_should">
-      We all should be involved in praying with our families, friends and our community.<br>
-      We are called to be Disciples of Christ.<br>
-      The vision of the ministry is to go into nursing homes, hospitals, shelter homes and share the Word of God to<br>
-      all who reside there, to let them know they are loved, important and<br>
-      not forgotten.<br>
-      Jesus wants them to know His mercy and grace is always available, it is never too late to receive Him as<br>
+      Jesus wants you to know His mercy and grace is always available, it is never too late to receive Him as
       Lord and Savior.<br>
     </div>
   </div>
