--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -109,7 +109,7 @@ footer {
 
 #mark1615_txt {
   margin-top: 20px;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.1em;
   font-size: 26px;
   font-family: "palatino linotype", serif;
   color: #544D00;
@@ -125,7 +125,7 @@ footer {
   text-align: left;
   font-size: 16px;
   font-style: italic;
-  color: #FFF47F;
+  color: #544D00;
   line-height: 1.5em;
   font-family: "open sans", sans-serif;
 }
