--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -121,8 +121,7 @@ footer {
 
 #we_all_should {
   padding: 20px;
-  padding-left: 300px;
-  text-align: left;
+  text-align: center;
   font-size: 16px;
   font-style: italic;
   color: #544D00;
