--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -109,6 +109,8 @@ footer {
 
 #mark1615_txt {
   margin-top: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
   letter-spacing: 0.1em;
   font-size: 26px;
   font-family: "palatino linotype", serif;
@@ -122,7 +124,7 @@ footer {
 #we_all_should {
   padding: 20px;
   text-align: center;
-  font-size: 16px;
+  font-size: 22px;
   font-style: italic;
   color: #544D00;
   line-height: 1.5em;
