--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -7,7 +7,8 @@
 <div class="row" style="min-width: 1028px;">
   <div class="col mark1615">
     <div id="mark1615_txt">
-      Jesus wants you to know His mercy and grace is always available, it is never too late to receive Him as
+      Jesus wants you to know His mercy and grace is always available.<br>
+      It is never too late to receive Him as
       Lord and Savior.<br>
     </div>
     <div id="mark1615_ref">
