--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -129,6 +129,7 @@ footer {
   color: #544D00;
   line-height: 1.5em;
   font-family: "open sans", sans-serif;
+  margin-bottom: 20px;
 }
 
 .card {
