--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,6 +6,8 @@ $first-row-height: 400px;
 $normal-font-size: 0.9em;
 $larger-font-size: 1.6em;
 $sans-font: "open sans", sans-serif;
+$background-color: #ecc0c1;
+$card-background: #689eff;
 
 .normal-font {
   font-size: $normal-font-size;
@@ -19,7 +21,7 @@ $sans-font: "open sans", sans-serif;
 
 /**************** body, header, footer ***********/
 body, html {
-  background-color: #eda5a6;
+  background-color: $background-color; /* #eda5a6; */
 }
 
 .container-fluid {
@@ -71,11 +73,11 @@ footer {
 }
 
 .card {
-  background-color: #eda5a6;
+  background-color: $background-color;
 }
 
 /************ HOME page ****************************/
-.john812 {
+div.home.col.one {
   background-image: url('/images/sun_clouds.png');
   height: $first-row-height;
   width: 100%;
@@ -88,22 +90,15 @@ footer {
   text-align: center;
 }
 
-#j812 {
+#home-one {
   font-family: "palatino linotype", serif;
   font-weight: bold;
   font-size: 58px;
   padding-top: 175px;
 }
 
-#john812 {
-  @extend .larger-font;
-  font-weight: bold;
-  color: #b4d4ec;
-  padding-top: 50px;
-}
-
 .mark1615 {
-  background: #eda5a6;
+  background: $background-color;
   text-align: center;
 }
 
@@ -114,10 +109,6 @@ footer {
   letter-spacing: 0.1em;
   font-size: 26px;
   font-family: "palatino linotype", serif;
-  color: #544D00;
-}
-
-#mark1615_ref {
   color: #544D00;
 }
 
@@ -138,7 +129,7 @@ footer {
 }
 
 div.card-body {
-  background-color: #e1b0b5;
+  background-color: $card-background;
 }
 
 hr {
@@ -373,7 +364,7 @@ svg {
 }
 
 div.card-body.events {
-  background-color: rgba(168, 224, 244, 0.19);
+  background-color: $card-background;
 }
 .card-title.events {
   color: #000000;
