--- a/lib/forall_web/templates/events/index.html.eex
+++ b/lib/forall_web/templates/events/index.html.eex
@@ -75,7 +75,7 @@
         </div>
 
        <div class="card events">
-          <img class="card-img-top" src="/images/wedding_pic.jpg" 
+          <img class="card-img-top" src="/images/norwood_wedding.jpg" 
                 alt="Marriage Preparation Course">
           <div class="card-body events">
             <h5 class="card-title events text-center">Indoor and Outdoor Weddings</h5>
