--- a/lib/forall_web/templates/layout/app.html.eex
+++ b/lib/forall_web/templates/layout/app.html.eex
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A & Z Gods Ministry For All People">
+    <meta name="description" content="A & Z Gods Ministry For All People Stoughton Brockton">
     <meta name="author" content="george@azgodsminsitry.com">
 
     <title>A & Z God's Ministry</title>
