--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -138,6 +138,33 @@ hr {
   background: #a8e0f4;
 }
 
+.text-block {
+  background-color: rgba(255,255,255, 0.8);
+}
+.phone-tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.phone-tooltip .tooltiptext {
+    visibility: hidden;
+    width: 130px;
+    background-color: $background-color;
+    color: #000;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+}
+
+.phone-tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
 /************ ABOUT page ****************************/
 #about_row {
   background: #6b9de8;
