--- a/lib/forall_web/templates/about/options_zenalia.html.eex
+++ b/lib/forall_web/templates/about/options_zenalia.html.eex
@@ -1,6 +1,6 @@
-<option value="h2PO8MCfsaQ">Through The Eyes of Faith - Life</option>
-<option value="b8eCoqQm7CA">Through The Eyes of Faith - New Years Resolution</option>
-<option value="XzCQQKzzofU">Through The Eyes Of Faith - Christmas</option>
-<option value="0OlLvUlamBU">Through The Eyes of Faith - Thanksgiving</option>
-<option value="XkeKXL19nxM">Through The Eyes of Faith - Faith & Healing</option>
-<option value="9xlBRro8krY">Through The Eyes of Faith</option>
+<option value="h2PO8MCfsaQ">Life</option>
+<option value="b8eCoqQm7CA">New Years Resolution</option>
+<option value="XzCQQKzzofU">Christmas</option>
+<option value="0OlLvUlamBU">Thanksgiving</option>
+<option value="XkeKXL19nxM">Faith & Healing</option>
+<option value="9xlBRro8krY">Introduction</option>
